--- a/theme/static/style.css
+++ b/theme/static/style.css
@@ -28,6 +28,9 @@ color:#AA0000;
     }
 
 
+    tt {
+        margin-top: 2em;
+    }
 
     body {
     line-height:1
@@ -192,11 +195,25 @@ color:#AA0000;
     line-height:1.7em
     }
 
-    dd,dt,li {
+    li {
     display:list-item;
-    margin:0;
+    margin: 0;
     padding:0
     }
+
+    dd,dt {
+    display:list-item;
+    margin:26px 0 5px 0;
+    padding:0
+    }
+
+/*    tt {
+        font-weight: 600;
+    }*/
+    dd {
+        margin: 0 0 0 1em;
+    }
+
 
     dd:last-child,
     dl:last-child,
@@ -253,8 +270,9 @@ color:#AA0000;
     pre,
     code,
     kbd,
-    samp {
-    font-family:monospace,sans-serif
+    samp,
+    .literal {
+    font-family: menlo, monospace,sans-serif
     }
 
     button,
