--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -77,15 +77,11 @@
         <ul class="G6 GS" id="footerTwo">
             <li><a href="{{ SITEURL }}/{{ FEED_RSS }}">RSS</a></li>
             <li><a href="https://github.com/kennethreitz">GitHub</a></li>
-            <li><a href="http://twitter.com/iA/">Twitter</a></li>
+            <li><a href="http://twitter.com/kennethreitz/">Twitter</a></li>
             <li>&copy; 2012 Kenneth Reitz.</li>
         </ul><!-- G6.GS#footerOne -->
     </nav>
 </footer>
-<script>!window.$ && document.write('<script src="{{ SITEURL }}/theme/js/external/jquery-1.6.1.min.js"><\/script>');</script>
-<script src="http://www.informationarchitects.jp/en/wp-content/themes/iA3 1.2.2/assets/js/external/jquery.fancybox-1.3.4.min.js"></script>
-<script src="{{ SITEURL }}/theme/js/external/jquery.timeago-0.9.3.min.js"></script>
-<script src="{{ SITEURL }}/theme/js/ia3.js"></script>
 <script>
     jQuery.noConflict();
 
