--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -75,7 +75,7 @@
     <nav>
 
         <ul class="G6 GS" id="footerTwo">
-            <li><a href="{{ SITEURL }}/{{ FEED_RSS }}">RSS</a></li>
+            <li><a href="{{ SITEURL }}/{{ FEED }}">RSS</a></li>
             <li><a href="https://github.com/kennethreitz">GitHub</a></li>
             <li><a href="http://twitter.com/kennethreitz/">Twitter</a></li>
             <li>&copy; 2012 Kenneth Reitz.</li>
