--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -1,11 +1,5 @@
 <p>
-My name is Kenneth Reitz.
-  <i>
-      <span class="heroku">
-        I work for Heroku.
-      </span>
-  </i>
-
+  My name is Kenneth Reitz. I work for Heroku.
 </p>
 <p>
   I'm an open source software architect that loves to streamline mundane things. I see beauty in elegant architectures. I strive to write the simplest APIs possible, and I do so with Python.
