--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -15,7 +15,7 @@
    I also enjoy <a href="http://photos.kennethreitz.com/">digital photography</a>.
 </p>
 
-<h2>Selected Articles</h2>
+<h2>Featured Articles</h2>
 
 
   {% set current_year = 0 %}
