--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -14,15 +14,18 @@
 
 
 
-<link rel="stylesheet" href="{{ SITEURL }}/theme/style.css">
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/style.css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/style-ia3-1.0.2.css">
-<link rel="stylesheet" href="{{ SITEURL }}/theme/css/style-fancybox-1.3.4.css">
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/style-fancybox-1.3.4.css">
+
+
+
 
     <body class="single">
         <div id="screen">
             <header>
     <h1 class="G2 GS">
-        <a class="G1 GS" href="/"><img alt="iA" src="/{{ SITEURL }}/theme/kr.gif"></a>
+        <a class="G1 GS" href="/"><img alt="KR" src="/{{ SITEURL }}/theme/kr.gif"></a>
     </h1><!-- .G2.GS -->
     <nav>
         <ul class="containsGrid G3" id="headerOne">
@@ -95,6 +98,11 @@
 </script>
 
 </div><!-- #screen -->
+
+    <script type="text/javascript" src="//www.hellobar.com/hellobar.js"></script>
+    <script type="text/javascript">
+        new HelloBar(36402,48802);
+    </script>
 
 {% include 'analytics.html' %}
 
