--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -17,8 +17,7 @@
     <link rel="stylesheet" href="{{ SITEURL }}/theme/style.css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/style-ia3-1.0.2.css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/style-fancybox-1.3.4.css">
-
-
+    <link rel="icon" type="image/png" href="{ SITEURL }}/theme/favicon.ico">
 
 
     <body class="single">
