--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -16,7 +16,8 @@
 
     <link rel="stylesheet" href="{{ SITEURL }}/theme/style.css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/style-ia3-1.0.2.css">
-    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/favicon.ico">
+    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/favicon.png">
+    <link rel="shortcut icon" href="{{ SITEURL }}/theme/favicon.png /
 
 
     <body class="single">
