--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/style-ia3-1.0.2.css">
     <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/favicon.png">
     <link rel="shortcut icon" href="{{ SITEURL }}/theme/favicon.png">
+    <meta name="readability-verification" content="demwdLS4SPwSHwGdxtnzESvZjdYAP3W2zbXMbUcP"/>
 
 
     <body class="single">
