Make gauges use a setting variable

--- a/theme/templates/analytics.html
+++ b/theme/templates/analytics.html
@@ -10,16 +10,17 @@
     } catch(err) {}</script>
 {% endif %}
 
-<script type="text/javascript">
-  (function() {
-    var t   = document.createElement('script');
-    t.type  = 'text/javascript';
-    t.async = true;
-    t.id    = 'gauges-tracker';
-    t.setAttribute('data-site-id',
-                   '4ddc1ab3f5a1f57b4d000009');
-    t.src = '//secure.gaug.es/track.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(t, s);
-  })();
-</script>
+{% if GAUGES %}
+    <script type="text/javascript">
+      (function() {
+        var t   = document.createElement('script');
+        t.type  = 'text/javascript';
+        t.async = true;
+        t.id    = 'gauges-tracker';
+        t.setAttribute('data-site-id', '{{ GAUGES }}');
+        t.src = '//secure.gaug.es/track.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(t, s);
+      })();
+    </script>
+{% endif %}
