--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -9,7 +9,7 @@
   I'm the author of <a href="http://python-requests.org">Requests</a>, Python HTTP for Humans.
 </p>
 
-<p>My days are spent on the technical design of Heroku's Python Stack. My nights are spent passionately contributing to open source projects and the Python community. I curate the <a href="https://github.com/blog">GitHub Reflog</a>, a semi-periodic chronicle of awesome open source repos.</p>
+<p>My days are spent on the technical design of Heroku's Python Stack. My nights are spent passionately contributing to open source projects and the Python community.</p>
 
 <p>
    I also enjoy <a href="http://www.flickriver.com/photos/kennethreitz/popular-interesting/">digital photography</a>.
