--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -12,7 +12,7 @@
 <p>My days are spent on the technical design of Heroku's Python Stack. My nights are spent passionately contributing to open source projects and the Python community.</p>
 
 <p>
-   I also enjoy <a href="http://www.flickriver.com/photos/kennethreitz/popular-interesting/">digital photography</a>.
+   I also enjoy <a href="http://www.flickriver.com/photos/kennethreitz/popular-interesting/">digital photography</a> and <a href="http://tracks.refact0r.org/">synths</a>.
 </p>
 
 <h2>Featured Articles</h2>
