--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -34,7 +34,7 @@
                 <ul>
                     <li><a href="/pages/colophon.html">Colophon</a></li>
                     <li><a href="/pages/open-projects.html">Projects</a></li>
-                    <li><a href="mailto:_@kennethreitz.com">Contact</a></li>
+                    <li><a href="mailto:contact@kennethreitz.com">Contact</a></li>
                 </ul>
             </li>
             <li class="G1">
@@ -58,7 +58,7 @@
             <li class="G1 GS">
                 <h2 class="HSC">Contact</h2>
                 <ul>
-                    <li><strong><a href="/">Blog</a></strong></li>
+                    <li><strong><a href="http://junk.kennethreitz.com/">Tumblr</a></strong></li>
                     <li><a href="http://twitter.com/kennethreitz">Twitter</a></li>
                     <li><a href="https://github.com/kennethreitz">GitHub</a></li>
                 </ul>
@@ -79,6 +79,7 @@
 
         <ul class="G6 GS" id="footerTwo">
             <li><a href="{{ SITEURL }}/{{ FEED }}">RSS</a></li>
+            <li><a href="http://junk.kennethreitz.com/">Tumblr</a></li>
             <li><a href="https://github.com/kennethreitz">GitHub</a></li>
             <li><a href="http://twitter.com/kennethreitz/">Twitter</a></li>
             <li>&copy; 2012 Kenneth Reitz.</li>
