--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -33,7 +33,7 @@
                 <h2 class="HSC">About</h2>
                 <ul>
                     <li><a href="/pages/colophon.html">Colophon</a></li>
-                    <li><a href="/pages/open-projects.html">Projects</a></li>
+                    <li><a href="/pages/events.html">Events</a></li>
                     <li><a href="mailto:contact@kennethreitz.com">Contact</a></li>
                 </ul>
             </li>
