--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -18,8 +18,6 @@
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/style-ia3-1.0.2.css">
     <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/favicon.png">
     <link rel="shortcut icon" href="{{ SITEURL }}/theme/favicon.png">
-    <meta name="readability-verification" content="demwdLS4SPwSHwGdxtnzESvZjdYAP3W2zbXMbUcP"/>
-
 
     <body class="single">
         <div id="screen">
@@ -101,5 +99,7 @@
 </div><!-- #screen -->
 
 {% include 'analytics.html' %}
+
+    <script type="text/javascript" src="http://anywhere.embed.ly/scripts/fd9cb7a17ae24ceab5aaf6e42ad17a8e.js?t=1343973174"></script>
 
 </body></html>
