--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -11,6 +11,7 @@
   {% if FEED_RSS %}
     <link href="{{ SITEURL }}/{{ FEED_RSS }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
   {% endif %}
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
 
 
@@ -99,7 +100,5 @@
 </div><!-- #screen -->
 
 {% include 'analytics.html' %}
-
-<script type="text/javascript" src="http://anywhere.embed.ly/scripts/a86d649f1ecb4ff8b97e5f003b277a4d.js?t=1343974448"></script>
 
 </body></html>
