talks and events

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -32,8 +32,8 @@
                 <h2 class="HSC">About</h2>
                 <ul>
                     <li><a href="/pages/colophon.html">Colophon</a></li>
+                    <li><a href="/pages/talks.html">Talks</a></li>
                     <li><a href="/pages/events.html">Events</a></li>
-                    <li><a href="mailto:contact@kennethreitz.com">Contact</a></li>
                 </ul>
             </li>
             <li class="G1">
@@ -57,7 +57,7 @@
             <li class="G1 GS">
                 <h2 class="HSC">Contact</h2>
                 <ul>
-                    <li><strong><a href="http://junk.kennethreitz.com/">Tumblr</a></strong></li>
+                    <li><a href="mailto:contact@kennethreitz.com">Email</a></li>
                     <li><a href="http://twitter.com/kennethreitz">Twitter</a></li>
                     <li><a href="https://github.com/kennethreitz">GitHub</a></li>
                 </ul>
