--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -1,18 +1,16 @@
 <p>
-  My name is Kenneth Reitz. I work for Heroku.
+  My name is Kenneth Reitz. I'm a minimalist that loves APIs, web services, elegant design, and Python.
 </p>
 <p>
-  I'm an open source software architect that loves to streamline mundane things. I see beauty in elegant architectures. I strive to write the simplest APIs possible, and I do so with Python.
+  I'm the product owner of Python at <a href="http://www.heroku.com">Heroku</a> and a member of the <a href="http://www.python.org/psf/">Python Software Foundation</a>. I spend a large portion of my time writing code and prose while traveling to <a href="http://kennethreitz.com/pages/talks.html">speak</a> at <a href="http://kennethreitz.com/pages/events.html">conferences</a>.
+</p>
+
+<p>
+  I'm most well known for my <a href="http://kennethreitz.com/pages/open-projects.html">open source software</a>, specifically <a href="http://python-requests.org">Requests</a:, Python HTTP for Humans.
 </p>
 
 <p>
-  I'm the author of <a href="http://python-requests.org">Requests</a>, Python HTTP for Humans.
-</p>
-
-<p>My days are spent on the technical design of Heroku's Python Stack. My nights are spent passionately contributing to open source projects and the Python community.</p>
-
-<p>
-   I also enjoy <a href="http://www.flickriver.com/photos/kennethreitz/popular-interesting/">digital photography</a> and <a href="http://tracks.refact0r.org/">synths</a>.
+   I'm also passionate about <a href="http://www.flickriver.com/photos/kennethreitz/popular-interesting/">digital photography</a> and <a href="http://tracks.refact0r.org/">music production</a>.
 </p>
 
 <h2>Featured Articles</h2>
