--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -2,11 +2,11 @@
   My name is Kenneth Reitz. I'm a minimalist that loves APIs, web services, elegant design, and Python.
 </p>
 <p>
-  I'm the product owner of Python at <a href="http://www.heroku.com">Heroku</a> and a member of the <a href="http://www.python.org/psf/">Python Software Foundation</a>. I spend a large portion of my time writing code and prose while traveling to <a href="http://kennethreitz.com/pages/talks.html">speak</a> at <a href="http://kennethreitz.com/pages/events.html">conferences</a>.
+  I'm the product owner of Python at Heroku and a member of the Python Software Foundation. I spend a large portion of my time writing code and prose while traveling to <a href="http://kennethreitz.com/pages/talks.html">speak at </a> <a href="http://kennethreitz.com/pages/events.html">conferences</a>.
 </p>
 
 <p>
-  I'm most well known for my <a href="http://kennethreitz.com/pages/open-projects.html">open source software</a>, specifically <a href="http://python-requests.org">Requests</a:, Python HTTP for Humans.
+  I'm most well known for my <a href="http://kennethreitz.com/pages/open-projects.html">open source software</a>, specifically <a href="http://python-requests.org">Requests</a>:, Python HTTP for Humans.
 </p>
 
 <p>
