--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -6,7 +6,7 @@
 </p>
 
 <p>
-  I'm most well known for my <a href="http://kennethreitz.com/pages/open-projects.html">open source software</a>, specifically <a href="http://python-requests.org">Requests</a>:, Python HTTP for Humans.
+  I'm most well known for my <a href="http://kennethreitz.com/pages/open-projects.html">open source software</a>, specifically <a href="http://python-requests.org">Requests</a>.
 </p>
 
 <p>
