--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -1,6 +1,7 @@
 <p>
-  My name is Kenneth Reitz. I'm a minimalist that loves APIs, web services, elegant design, and Python.
+  My name is Kenneth Reitz.
 </p>
+<p>I'm a minimalist that loves APIs, web services, elegant design, and Python.</p>
 <p>
   I'm the product owner of Python at Heroku and a member of the Python Software Foundation. I spend a large portion of my time writing code and prose while traveling to <a href="http://kennethreitz.com/pages/talks.html">speak at </a> <a href="http://kennethreitz.com/pages/events.html">conferences</a>.
 </p>
