--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -41,7 +41,7 @@
                 <ul>
                     <li><a href="/archives.html">Articles</a></li>
                     <li><a href="/pages/open-projects.html">Projects</a></li>
-                    <li><a href="http://photos.kennethreitz.com">Photos</a></li>
+                    <li><a href="/pages/photography.html">Photos</a></li>
                 </ul>
             </li>
             <li class="G1">
