--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-   I'm also passionate about <a href="http://www.flickriver.com/photos/kennethreitz/popular-interesting/">digital photography</a> and <a href="http://tracks.refact0r.org/">music production</a>.
+   I'm also passionate about <a href="/pages/photography.html">digital photography</a> and <a href="http://tracks.refact0r.org/">music production</a>.
 </p>
 
 <h2>Featured Articles</h2>
