Cleaned up logotype

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -24,7 +24,7 @@
         <div id="screen">
             <header>
     <h1 class="G2 GS">
-        <a class="G1 GS" href="/"><img alt="KR" src="/{{ SITEURL }}/theme/kr.gif"></a>
+        <a class="G1 GS" href="/"><img alt="KR" src="/{{ SITEURL }}/theme/kr.png"></a>
     </h1><!-- .G2.GS -->
     <nav>
         <ul class="containsGrid G3" id="headerOne">
