--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -40,7 +40,7 @@
   </div>
 
   <hr>
-  <p>Follow me on GitHub as <a href="http://github.com/kennethreitz">kennethreitz</a>.</p>
+  <p>Follow me on Twitter as <a href="http://twitter.com.com/kennethreitz">kennethreitz</a>.</p>
 
   {% if DISQUS_SITENAME %}
   <div class="comments">
