--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -3,6 +3,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
+  <meta name="google-site-verification" content="eWUEkqMzoVulIJMLI9pJbfiGzmUOiFDGc6DRYaknL1I" />
+
   <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
   <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; width=device-width;">
 
