--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -39,9 +39,9 @@
             <li class="G1">
                 <h2 class="HSC">Works</h2>
                 <ul>
-                    <li><a href="/archives.html">Articles</a></li>
                     <li><a href="/pages/open-projects.html">Projects</a></li>
                     <li><a href="/pages/photography.html">Photos</a></li>
+                    <li><a href="http://tracks.refact0r.org/">Music</a></li>
                 </ul>
             </li>
             <li class="G1">
